data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4094.wast
;; 3. **Test: Invalid Function Signature with Pop Operations Error**    - Description: Create a function table and invoke a function with an incorrect number of parameters using the `call_indirect` instruction. The operand stack will not match the function signature, leading to stack underflow and triggering an `unreachable` instruction.    - Constraint: Insufficient operands on stack results in failure.    - Unreachable Execution: Stack mismanagement leads to reaching `unreachable`.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (param i32) (result i32)
      i32.const 0
    )
    (func $test
      (call_indirect (type $sig) (i32.const 0))
    )
  )
  "type mismatch"
)